# ecnu-tpf

./: .gitignore  README.md  doc.md  test.up.txt
2d-grid-insert-value/: 2d-grid-insert-value.c
Freecppplus/: freecplus_20200926.tgz  sourcecode-utf8.tgz
auto_sampling/: auto_sampling copy.py  auto_sampling.py  auto_sampling_sample.py  auto_sampling_yiping.py  test_py_arg.py
blas/: blas_demo.cpp  blas_demo1.cpp
blas/gemm/: run.sh
blas/gemm-opt0/: my-self-sample-gemm.cpp  opt-readme.md
blas/gemm-opt1/: my-self-sample-gemm.cpp  opt-readme.md  run-dgemm-test.sh
c++utils/: NonCopyable.h  Singleton.h  test.cpp  timer.h
c++utils/readfile/: a.out  a.out.txt  a.out.txt.txt  a.out.txt.txt.txt  config.txt  out.out  readfile.cpp  readfile.h  test.cpp  test.txt  timestamp.cpp  timestamp.h  tsc.cpp  tsc.h
c_fortran_mixed/: c  c.c  cFortranMixedReadme.md  fortran.f90  fortranHello.f90  makefile  makefile.sh  tempCodeRunnerFile  tempCodeRunnerFile.c  test
c_fortran_mixed/eample1/: Makefile  main.f90
c_fortran_mixed/eample2_gcc/: Makefile  instrfunc.c  sub.c
c_fortran_mixed/timing_probe4/: Makefile
cache-miss/: a.out  main.c  my-self-test.c  perf.data  test1.c  test2.c
cmake/: cmakeREADME.md
cmake/cmake-test/: CMakeLists.txt  main  main.c
cmake/cmake-test/cmake-llvm-projectDemo/: CMakeLists.txt  main.cpp
cmake/cmake-test/cmake-llvm-projectDemo/build-test/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/doc/: README.md
cmake/my-examples/cmake-project-example/version0.1.1/threadPool/: CMakeLists.txt
cmake/my-examples/cmake-project-example/version0.1.1/threadPool/include/threadPool/: threadPool.h
cmake/my-examples/cmake-project-example/version0.1.1/threadPool/src/: main.cpp
cmake/my-examples/cmake-project-example/version0.1.1/utest/: CMakeLists.txt  gtestMain.cpp
cmake/my-examples/cmake-project-example/version0.1.1/utest/utiles/: test_utiles.cpp
conferenceRecorder/: with_yiping.md  with_yiping.md.bak
cplusplusBase/cases/: 255  255.cpp
cuda/testCudaEnv/: add.cpp  add.cu
dataStruct/: functrace.c  stack.h  test.c
dataStruct/hash_table/: hash_func.cpp  test.c
decode/: decode.txt
decode/decToBni/: decConvBni.cc
decode/pythonEnDecode/: printBinay.py  printBinay1.py
docker/: dockerREADME.md  readme.md
ecasm/: buildcast.txt  cesm.build.process.txt  setup.txt
ecasm/GPTL/: test.c
ecasm/dataPostProcess/: readme.md
ecasm/esmtest_bk/: CaseStatus  README.case  env_build.xml  env_mach_pes.xml  env_mach_specific  env_run.xml
ecasm/getDiffModule/: ccsm_comp_mod.F90  statstic.txt
fno/: myfno.py  myfno1d.py  utilities3.py
gcc_finstrument_function/: README.md  a.out  a.out1  instrfunc  instrfunc.c  instrument  objdump.txt  rdtsc.cpp  rdtsc0.cpp  rdtsc1.cpp
gcc_finstrument_function/graph/: instrfunc.h  test.c
gdb/: gdbREADME.md
gtest/: gtestREADME.md
gtest/gmock-demo/: CMakeLists.txt  calculator.h  math.h  test_math.cpp
gtest/gtest-demo/: CMakeLists.txt  main.cpp
gtest/gtest-demo1/: CMakeLists.txt  main.cpp  test.cpp
latestTimer/: CMakeLists.txt  run.sh
latestTimer/test/: CMakeLists.txt  test.cpp
latestTimer/timerLibs/: CMakeLists.txt
latestTimer/timerLibs/sharedLibs/: CMakeLists.txt
latestTimer/timerLibs/sharedLibs/include/perf/: bridge.h  timerImp.h
latestTimer/timerLibs/sharedLibs/include/utiles/: get_date.h
latestTimer/timerLibs/sharedLibs/src/: bridge.cpp  timerImp.cpp
latestTimer/timerLibs/staticLibs/: CMakeLists.txt
latestTimer/timerLibs/staticLibs/src/: timer.c
layout_balancing/: generate_module_frmwrk.py  layout_4_mincost.py  layout_4_mintime.py  load_balancing_solve_jpl.py  optimize_model.py  run-debug-log  trans_fit_parameters.json  write_to_layout.py
layout_balancing-with-debug/: generate_module_frmwrk.py  layout_5_mintime.py  load_balancing_solve_jpl.py  trans_fit_parameters.json  write_to_layout.py
layout_balancing-with-debug/patterns/: get_patterns.py  pattern_4.out  pattern_5.npy  pattern_list_3.npy  pattern_list_4.npy  patterns.sh
layout_balancing-with-debug/template/: env_mach_pes.template  layout_3_mintime.template  layout_4_mincost.template  layout_5_mintime.template
layout_balancing/env_mach/: env_mach_pes.xml
layout_balancing/patterns/: pattern_4.npy
layout_balancing/template/: layout_2_mincost.template  layout_2_mintime.template  (+4 more)
llvm/: llvmREADME.md
llvm/examples/example-CMakeLists-01-HelloWorld/: CMakeLists.txt  README.md
llvm/examples/example-CMakeLists-01-HelloWorld/cmake/modules/: AddSimpleLang.cmake
llvm/examples/example-CMakeLists-01-HelloWorld/include/simplelang/Basic/: Version.h  Version.inc.in
llvm/examples/example-CMakeLists-01-HelloWorld/lib/Basic/: CMakeLists.txt  Version.cpp
llvm/examples/example-CMakeLists-01-HelloWorld/tools/: CMakeLists.txt
llvm/examples/example-CMakeLists-01-HelloWorld/tools/driver/: CMakeLists.txt  Driver.cpp
matrix-block/: matrix-block-demo1.c
niuke_leetcode/: a.out  test  test.cc
programming-specifications/: programming-specifications.md
readme_exmple/: README.md
setEnv/: configEnv.sh  gszie  pipInstall.sh  set-cuda12-env.sh  set-llvm-env.sh  set-openblas-env.sh  set-swap-mem.sh
sqlite3/: a.out  sqlite_api.h  test.c
threadpoll/: a.out  test.cpp  thread_pool.h
timerC/version0.1.2/libprobe/: CMakeLists.txt  trace.csv
timerC/version0.1.2/libprobe/utility/: stack.h
timerSharedStaticCorCXX/: readme.md
timing_probe/: perf_counter.h  probe.cpp  probe.h
timing_probe2/: functrace.c  test.c
timing_probe3/: perf_counter.h  stack.h
utilib/hash/: test  (+2 more)
wrap/: a.out  main.c  wrap_symbol.c  wrap_symbol.h
yiping_loadbalance/: load_balancing_solve1.py
yiping_loadbalance-wiht-deeplean-model/: fit_parameters.json  load_balancing_solve1.py  optimize.py
(+577 files in other folders)
